Add block renderer for the targeted item. Add custom tooltip text using the same mechanism as item tooltips.

--- a/assets/ui/WorldlyTooltip.ui
+++ b/assets/ui/WorldlyTooltip.ui
@@ -6,34 +6,70 @@
         "contents": [
             {
                 "type" : "UIBox",
-                "id": "tooltipContainer",
-                "content": {
-                        "type": "columnLayout",
-                        "contents": [
-                            {
-                                "type": "UILabel",
-                                "id": "blockName"
-                            },
-                            {
-                                "type": "UILabel",
-                                "id": "blockUri"
-                            }
-                        ],
-                        "layoutInfo": {
-                                "use-content-width": true,
-                                "use-content-height": true,
-                                "position-horizontal-center": {},
-                                "position-top": {}
-                            }
-                },
                 "layoutInfo": {
-                        "use-content-width": true,
-                        "use-content-height": true,
-                        "position-horizontal-center": {},
-                        "position-top": {}
+                    "position-top" : {
+                        "target" : "TOP",
+                        "widget" : "icon",
+                        "offset" : -3
+                    },
+                    "position-left" : {
+                        "target" : "LEFT",
+                        "widget" : "icon",
+                        "offset": -6
+                    },
+                    "position-right" : {
+                        "target" : "RIGHT",
+                        "widget" : "tooltipContainer",
+                        "offset": -6
+                    },
+                    "position-bottom" : {
+                        "target" : "BOTTOM",
+                        "widget" : "icon",
+                        "offset": -3
                     }
+                }
+            },
+            {
+                "type": "ItemIcon",
+                "id": "icon",
+                "layoutInfo": {
+                    "width": 50,
+                    "height": 50,
+                    "position-horizontal-center": {},
+                    "position-top": {
+                        "offset": 3
+                    }
+                }
+            },
+            {
+                "type": "columnLayout",
+                "id": "tooltipContainer",
+                "contents": [
+                        {
+                            "type": "UILabel",
+                            "id": "blockName"
+                        },
+                        {
+                            "type": "UIList",
+                            "id": "tooltip"
+                        }
+                ],
+                "layoutInfo": {
+                    "use-content-width": true,
+                    "use-content-height": true,
+                    "position-horizontal-left": {},
+                    "position-top" : {
+                        "target" : "TOP",
+                        "widget" : "icon",
+                        "offset" : 3
+                    },
+                    "position-left" : {
+                        "target" : "RIGHT",
+                        "widget" : "icon",
+                        "offset": 3
+                    }
+                }
             }
-
         ]
     }
 }
