--- a/assets/ui/WorldlyTooltip.ui
+++ b/assets/ui/WorldlyTooltip.ui
@@ -5,31 +5,6 @@
         "type": "relativeLayout",
         "contents": [
             {
-                "type" : "UIBox",
-                "layoutInfo": {
-                    "position-top" : {
-                        "target" : "TOP",
-                        "widget" : "icon",
-                        "offset" : -3
-                    },
-                    "position-left" : {
-                        "target" : "LEFT",
-                        "widget" : "icon",
-                        "offset": -6
-                    },
-                    "position-right" : {
-                        "target" : "RIGHT",
-                        "widget" : "tooltipContainer",
-                        "offset": -6
-                    },
-                    "position-bottom" : {
-                        "target" : "BOTTOM",
-                        "widget" : "icon",
-                        "offset": -3
-                    }
-                }
-            },
-            {
                 "type": "ItemIcon",
                 "id": "icon",
                 "layoutInfo": {
@@ -44,6 +19,7 @@
             {
                 "type": "columnLayout",
                 "id": "tooltipContainer",
+                "fillVerticalSpace": false,
                 "contents": [
                         {
                             "type": "UILabel",
