fix: keep aspect ratio of icons (just scale)
- adds new 'tooltip.skin' based on 'engine:hud' enforcing that `ItemIcon`s are scaled properly (keeping their aspect ratio)
- use the new skin in the tooltip UI
- refactor `WorldlyTooltip.java` by moving initialisation code to separate methods

--- a/assets/ui/WorldlyTooltip.ui
+++ b/assets/ui/WorldlyTooltip.ui
@@ -1,6 +1,6 @@
 {
   "type": "WorldlyTooltip",
-  "skin": "HUD",
+  "skin": "WorldlyTooltip:tooltip",
   "contents": {
     "type": "relativeLayout",
     "contents": [
@@ -25,11 +25,7 @@
               "contents": [
                 {
                   "type": "ItemIcon",
-                  "id": "icon",
-                  "layoutInfo": {
-                    "height": 50,
-                    "width": 50
-                  }
+                  "id": "icon"
                 },
                 {
                   "type": "columnLayout",
